# x-ambiata

./: .gitmodules  .travis.yml  README.md  boris.toml  master.toml
framework/: cabal  mafia  master.toml
x-aeson/: README.md  ambiata-x-aeson.cabal  ambiata-x-aeson.lock-7.10.2  ambiata-x-aeson.lock-8.0.2  x-aeson.cabal  x-aeson.submodules
x-aeson/src/X/Data/: Aeson.hs
x-aeson/src/X/Data/Aeson/: TH.hs
x-aeson/test/: test.hs
x-aeson/test/Test/X/Data/: Aeson.hs
x-aeson/test/X/Test/Data/: Aeson.hs
x-attoparsec/: README.md  ambiata-x-attoparsec.cabal  ambiata-x-attoparsec.lock-7.10.2  ambiata-x-attoparsec.lock-8.0.1  ambiata-x-attoparsec.submodules  x-attoparsec.cabal
x-attoparsec/src/X/Data/Attoparsec/: ByteString.hs  Text.hs
x-attoparsec/src/X/Data/Attoparsec/ByteString/: Ascii.hs
x-attoparsec/test/: test.hs
x-attoparsec/test/Test/X/Data/Attoparsec/: Arbitrary.hs  ByteString.hs  Gen.hs  Text.hs
x-bytestring/: ambiata-x-bytestring.cabal  ambiata-x-bytestring.lock-7.10.2  ambiata-x-bytestring.lock-8.0.1
x-bytestring/src/X/Data/: ByteString.hs
x-bytestring/src/X/Data/ByteString/: Char8.hs  Unsafe.hs
x-bytestring/test/: test.hs
x-bytestring/test/Test/X/Data/: ByteString.hs
x-bytestring/test/Test/X/Data/ByteString/: Char8.hs  Unsafe.hs
x-conduit/: ambiata-x-conduit.cabal  ambiata-x-conduit.lock-7.10.2  ambiata-x-conduit.lock-7.8.4  ambiata-x-conduit.lock-8.0.1  x-conduit.cabal
x-conduit/src/X/Control/Monad/Trans/: Resource.hs
x-conduit/src/X/Data/: Conduit.hs
x-conduit/src/X/Data/Conduit/: Binary.hs  Either.hs
x-conduit/test/: test.hs
x-conduit/test/Test/X/Control/Monad/Trans/: Resource.hs
x-conduit/test/Test/X/Data/Conduit/: Binary.hs  Either.hs
x-conduit/test/data/: test.psv
x-either/: ambiata-x-either.cabal  x-either.cabal
x-either/src/X/Control/Monad/Trans/: Either.hs
x-either/test/: test.hs
x-either/test/Test/X/Control/Monad/Trans/: Either.hs
x-eithert/: ambiata-x-eithert.cabal  ambiata-x-eithert.lock-7.10.2  ambiata-x-eithert.lock-8.0.1  ambiata-x-eithert.submodules  x-eithert.cabal
x-eithert/src/X/Control/Monad/Trans/: Either.hs
x-eithert/src/X/Control/Monad/Trans/Either/: Exit.hs
x-eithert/test/: test.hs
x-eithert/test/Test/X/Control/Monad/Trans/: Either.hs
x-eithert/test/Test/X/Control/Monad/Trans/Either/: Exit.hs
x-exception/: README.md  ambiata-x-exception.cabal  ghci  x-exception.cabal  x-exception.submodules
x-exception/src/X/Control/Monad/: Catch.hs
x-exception/src/X/Exception/: Catch.hs
x-exception/test/: test.hs
x-exception/test/Test/X/Control/Monad/: Catch.hs
x-exception/test/Test/X/Exception/: Catch.hs
x-file-embed/: ambiata-x-file-embed.cabal  ambiata-x-file-embed.lock-7.10.2
x-file-embed/src/X/Data/: FileEmbed.hs
x-file-embed/test/: test.hs
x-file-embed/test/Test/X/Data/: FileEmbed.hs
x-file-embed/test/example/: foo.c  foo.h
x-htoml/: COPYING  README.md  ambiata-x-htoml.cabal  ambiata-x-htoml.lock-7.10.2  ambiata-x-htoml.lock-8.0.1  x-htoml.cabal  x-htoml.submodules
x-htoml/src/Text/Toml/: Parser.hs  Types.hs
x-htoml/src/X/Text/: Toml.hs
x-htoml/test/: test.hs
x-htoml/test/Test/X/Text/: Toml.hs
x-htoml/test/X/Test/Text/: Toml.hs
x-optparse/: README.md  ambiata-x-optparse.cabal  ambiata-x-optparse.lock-7.10.2  ambiata-x-optparse.lock-8.0.2  x-optparse.cabal  x-optparse.submodules
x-optparse/src/X/Options/: Applicative.hs
x-optparse/src/X/Options/Applicative/: Data.hs
x-optparse/test/: test.hs
x-optparse/test/Test/X/Options/: Applicative.hs
x-optparse/test/X/Test/Options/: Applicative.hs
x-show/: ambiata-x-show.cabal  ambiata-x-show.lock-8.0.1
x-show/src/X/Text/: Show.hs
x-show/test/: test.hs
x-show/test/Test/X/Text/: Show.hs
x-templatehaskell/: ambiata-x-templatehaskell.cabal  ambiata-x-templatehaskell.lock-7.10.2  ambiata-x-templatehaskell.lock-8.0.1  x-templatehaskell.cabal  x-templatehaskell.submodules
x-templatehaskell/src/X/Language/Haskell/: TH.hs
x-templatehaskell/src/X/Language/Haskell/TH/: Syntax.hs
x-templatehaskell/test/: test.hs
x-templatehaskell/test/Test/X/Framework/Language/Haskell/: TH.hs
x-templatehaskell/test/Test/X/Language/Haskell/: TH.hs
x-unix/: README.md  x-unix.cabal  x-unix.submodules
x-unix/cbits/: Test.c
x-unix/include/: Test.h
x-unix/src/X/System/Posix/: Fcntl.hs
x-unix/test/: test-io.hs
x-unix/test/Test/IO/X/System/Posix/: Fcntl.hs
x-vector/: ambiata-x-vector.cabal  ambiata-x-vector.lock-7.10.2
x-vector/bench/: bench.hs
x-vector/bench/Bench/: MapMaybe.hs  Merge.hs
x-vector/src/X/Data/: Vector.hs
x-vector/src/X/Data/Vector/: Cons.hs  Generic.hs  Grow.hs  Primitive.hs  Ref.hs  Storable.hs  Stream.hs  Unboxed.hs
x-vector/src/X/Data/Vector/Stream/: Conversion.hs  Enum.hs  Group.hs  Map.hs  Merge.hs
x-vector/test/: test.hs
x-vector/test/Test/X/Data/Vector/: Generic.hs  Grow.hs  Ref.hs
x-vector/test/Test/X/Data/Vector/Stream/: Conversion.hs  Enum.hs  Group.hs  Map.hs  Merge.hs
