name:                  ambiata-x-aeson
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-aeson
category:              x-aeson
cabal-version:         >= 1.8
build-type:            Simple
description:           x-aeson.

library
  build-depends:
                       ambiata-p
                     , aeson                           >= 0.8        && < 1.4
                     , base                            >= 3          && < 6
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , text                            >= 1.1        && < 1.3
                     , unordered-containers            == 0.2.*
                     , vector                          >= 0.10       && < 0.13
                     , template-haskell


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Aeson
                       X.Data.Aeson.TH

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       aeson
                     , base
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , text
                     , ambiata-x-aeson
