name:                  x-aeson
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-aeson
category:              x-aeson
cabal-version:         >= 1.8
build-type:            Simple
description:           x-aeson.

library
  build-depends:
                       aeson                           == 0.8.*
                     , base                            >= 3          && < 5
                     , text                            >= 1.1        && < 1.3
 
  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Aeson

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       aeson
                     , base
                     , orphanarium-aeson
                     , orphanarium-core
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , text
                     , x-aeson
