name:                  ambiata-x-attoparsec
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-attoparsec
category:              x-attoparsec
cabal-version:         >= 1.8
build-type:            Simple
description:           x-attoparsec.

library
  build-depends:
                       attoparsec                      >= 0.12       && < 0.14
                     , base                            >= 3          && < 5
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , ambiata-p
                     , text                            >= 1.1        && < 1.3

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Attoparsec.ByteString
                       X.Data.Attoparsec.Text

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       attoparsec
                     , base
                     , ambiata-disorder-core
                     , ambiata-p
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , text
                     , ambiata-x-attoparsec
