name:                  ambiata-x-bytestring
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-bytestring.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-x-bytestring.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , vector                          >= 0.10       && < 0.12

  ghc-options:
                       -Wall -O2

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.ByteString
                       X.Data.ByteString.Char8
                       X.Data.ByteString.Unsafe

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , QuickCheck                      == 2.8.*
                     , ambiata-disorder-core
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-x-bytestring
                     , bytestring                      == 0.10.*
                     , quickcheck-instances            == 0.3.*
                     , text                            >= 1.1        && < 1.3
                     , vector                          >= 0.10       && < 0.12
