name:                  ambiata-x-conduit
version:               0.0.1.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-conduit
category:              x-conduit
cabal-version:         >= 1.8
build-type:            Simple
description:           x-conduit.

library
  build-depends:
                       base                            >= 3          && < 5
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , mtl                             == 2.2.*
                     , resourcet                       == 1.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Conduit.Binary
                       X.Data.Conduit.Either

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-x-conduit
                     , ambiata-disorder-core
                     , bytestring
                     , conduit
                     , conduit-extra
                     , filepath
                     , mtl
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , temporary
                     , text
