name:                  ambiata-x-either
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-either.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           x-either.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-x-exception
                     , bifunctors                      >= 4.2        && < 5
                     , exceptions                      >= 0.6        && < 0.9
                     , either                          >= 4.3        && < 4.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Control.Monad.Trans.Either

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , disorder-core
                     , ambiata-x-either
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.5
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
