name:                  ambiata-x-eithert
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-eithert.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           x-eithert.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , transformers                    >= 0.4        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Control.Monad.Trans.Either

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , disorder-core
                     , ambiata-x-eithert
                     , transformers                    >= 0.4        && < 0.5
                     , QuickCheck                      == 2.7.*
