name:                  ambiata-x-eithert
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-eithert.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           x-eithert.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-x-exception
                     , exceptions                      >= 0.6        && < 0.9
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Control.Monad.Trans.Either
                       X.Control.Monad.Trans.Either.Exit

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-x-eithert
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.5
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
