name:                  ambiata-x-exception
version:               0.0.1.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-exception
category:              x-exception
cabal-version:         >= 1.8
build-type:            Simple
description:           x-exception.

library
  build-depends:
                       base                            >= 3          && < 5
                     , exceptions                      >= 0.6        && < 0.9

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Control.Monad.Catch

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-x-exception
                     , text
                     , QuickCheck
                     , quickcheck-instances
