name:                  x-exception
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-exception
category:              x-exception
cabal-version:         >= 1.8
build-type:            Simple
description:           x-exception.

library
  build-depends:
                       base                            >= 3          && < 5
                     , either                          == 4.3.*
                     , exceptions                      >= 0.6        && < 0.9
                     , text                            == 1.2.*
                     , transformers                    >= 0.3     && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Exception.Catch

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-core
                     , either
                     , exceptions                      == 0.8.*
                     , text                            == 1.2.*
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , x-exception
