name:                  ambiata-x-htoml
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-htoml
category:              x-htoml
cabal-version:         >= 1.8
build-type:            Simple
description:           x-htoml.

library
  build-depends:
                       base                            >= 3          && < 6
                     , containers                      >= 0.5        && < 0.6
                     , lens                            >= 4.6        && < 4.16
                     , old-locale                      == 1.0.*
                     , parsec                          >= 3.1.2      && < 4
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.10
                     , unordered-containers            >= 0.2        && < 0.3

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Text.Toml
                       Text.Toml.Parser
                       Text.Toml.Types

                       X.Text.Toml

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-lens
                     , text
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , ambiata-x-htoml
