name:                  ambiata-x-htoml
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-htoml
category:              x-htoml
cabal-version:         >= 1.8
build-type:            Simple
description:           x-htoml.

library
  build-depends:
                       base                            >= 3          && < 5
                     , htoml                           == 0.1.*
                     , lens                            >= 4.6        && < 4.9
                     , text                            == 1.2.*
                     , time                            == 1.4.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Text.Toml

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , htoml
                     , ambiata-disorder-core
                     , ambiata-disorder-lens
                     , text
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , ambiata-x-htoml
