name:                  ambiata-x-optparse
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-optparse
category:              x-optparse
cabal-version:         >= 1.8
build-type:            Simple
description:           x-optparse.

library
  build-depends:
                       base                            >= 3          && < 5
                     , attoparsec                      == 0.12.*
                     , optparse-applicative            >= 0.11       && < 0.13
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Options.Applicative

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-core
                     , ambiata-x-optparse
                     , attoparsec
                     , optparse-applicative
                     , text                            == 1.2.*
                     , transformers
                     , transformers-compat
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
